--- a/diseno.css
+++ b/diseno.css
@@ -2,140 +2,401 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
+
 }
 
 body {
-display: flex;
-min-height: 1080px;
-flex-direction: column;
-align-items: center;
-gap: 100px;
-    
-}
-.header{
-display: flex;
-padding: 10px 40px;
-justify-content: space-between;
-align-items: center;
-align-self: stretch;
-background: #1E2959;
-
-}
-.header-background:hover{
- background: #4b557c;
-      color: #aa6825;
-      border-radius: 30px;
-}
-.logo-img {
- width: 172px;
-height: 154px;
-
-}
-.header-background {
- display: flex;
-width: 550px;
-height: 154px;
-justify-content: center;
-align-items: center;
-}
-.home-link {
-color: #FFF;
-
-font-family: Inter;
-font-size: 32px;
-font-style: normal;
-font-weight: 900;
-line-height: 110%; /* 61.6px */
-letter-spacing: -1.68px;
-text-decoration: none;
- }
- .header-links {
   display: flex;
-width: 688.688px;
-padding: 0 80px;
-justify-content: center;
-align-items: center;
-gap: 39px;
+  min-height: 1080px;
+  flex-direction: column;
+  align-items: center;
+  gap: 100px;
 
- }
- .header-links-font:hover {
-     background: rgba(200,200,200,1);
-      color: #aa6825;
-      border-radius: 22px;
-  }
+}
 
- .header-links-font {
+.header {
+  display: flex;
+  padding: 10px 40px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  background: #1E2959;
+
+}
+
+.header-background:hover {
+  background: #4b557c;
+  color: #aa6825;
+  border-radius: 30px;
+}
+
+.logo-img {
+  width: 172px;
+  height: 154px;
+
+}
+
+.header-background {
+  display: flex;
+  width: 550px;
+  height: 154px;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-link {
+  color: #FFF;
+
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 110%;
+  /* 61.6px */
+  letter-spacing: -1.68px;
+  text-decoration: none;
+}
+
+.header-links {
+  display: flex;
+  width: 688.688px;
+  padding: 0 80px;
+  justify-content: center;
+  align-items: center;
+  gap: 39px;
+
+}
+
+.header-links-font:hover {
+  background: rgba(200, 200, 200, 1);
+  color: #aa6825;
+  border-radius: 22px;
+}
+
+.header-links-font {
   color: #FFFFFF;
   display: flex;
-padding: 8px 33px;
-justify-content: center;
-align-items: flex-start;
-text-decoration: none;
- }
- .umng-link {
- width: 353px;
-align-self: stretch;
+  padding: 8px 33px;
+  justify-content: center;
+  align-items: flex-start;
+  text-decoration: none;
+}
 
- }
- .main-content{
-  
+.umng-link {
+  width: 353px;
+  align-self: stretch;
+
+}
+
+.main-content {
+
   display: flex;
-height: 1237px;
-padding: 20px 64px;
-flex-direction: column;
-align-items: flex-start;
-gap: 7px;
-flex-shrink: 0;
-align-self: stretch;
+  height: 1237px;
+  padding: 20px 64px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 7px;
+  flex-shrink: 0;
+  align-self: stretch;
 }
+
 .section-title {
-color: #000;
+  color: #000;
 
-text-align: center;
-font-family: Inter;
-font-size: 32px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-letter-spacing: 8.32px;
+  text-align: center;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 8.32px;
 }
+
 .section-texto {
-color: #000;
+  color: #000;
 
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 5.2px;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 5.2px;
 }
+
 .video-container-content {
   display: flex;
-height: 956px;
-max-width: 1575px;
-padding: 42px 0;
-justify-content: center;
-align-items: flex-start;
-flex-shrink: 0;
-align-self: stretch;
-background: rgba(167, 167, 167, 0.33);
+  height: 956px;
+  max-width: 1575px;
+  padding: 42px 0;
+  justify-content: center;
+  align-items: flex-start;
+  flex-shrink: 0;
+  align-self: stretch;
+  background: rgba(167, 167, 167, 0.33);
 }
+
 .video-container {
-display: flex;
-width: 1460px;
-height: 834px;
-align-items: center;
-justify-content: center;
-gap: 10px;
-flex-wrap: wrap;
-background: #8F8F8F;
+  display: flex;
+  width: 1460px;
+  height: 834px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  background: #8F8F8F;
 }
-footer{
-display: flex;
-padding: 64px;
-justify-content: space-between;
-align-items: center;
-align-self: stretch;
-border-top: 2px solid rgba(0, 0, 0, 0.10);
+
+footer {
+  display: flex;
+  padding: 64px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-top: 2px solid rgba(0, 0, 0, 0.10);
+}
+
+.collage-container2 {
+  display: flex;
+  height: 842px;
+  min-width: 1057px;
+  align-items: flex-start;
+  gap: 10px;
+  flex: 1 0 0;
+  flex-wrap: wrap;
+}
+
+.collage-container3 {
+  display: flex;
+  padding: 0 63px;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 0 0;
+  align-self: stretch;
+  background: url('fondo.jpg') center/cover no-repeat, #FFF;
+}
+
+.collage-container4 {
+  display: flex;
+  height: 759.27px;
+  padding: 37px 0;
+  flex-direction: column;
+  align-items: center;
+  gap: 49px;
+  align-self: stretch;
+}
+
+.collage-container4-1 {
+  display: flex;
+  height: 82px;
+  padding-right: 56px;
+  justify-content: center;
+  align-items: center;
+  gap: 187px;
+  flex-shrink: 0;
+  align-self: stretch;
+}
+
+.collage-container4-2 {
+  display: flex;
+  height: 537.327px;
+  align-items: center;
+  gap: 5px;
+  flex-shrink: 0;
+  align-self: stretch;
+  aspect-ratio: 1332.00/537.33;
+}
+
+.fecha {
+  display: flex;
+  width: 173px;
+  height: 64px;
+  padding: 25px 42px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 24px;
+  background: rgba(50, 58, 135, 0.76);
+}
+
+.fecha-texto {
+  color: #000;
+  text-align: center;
+
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-shadow:
+    1px 1px 0 #FFF,
+    -1px 1px 0 #FFF,
+    1px -1px 0 #FFF,
+    -1px -1px 0 #FFF;
+}
+
+.collage-container {
+  display: flex;
+  padding: 0 47px;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex: 1 0 0;
+  flex-wrap: wrap;
+}
+
+.boton-collage {
+  display: flex;
+  min-width: 228px;
+  padding: 8px 30px;
+  justify-content: center;
+  align-items: flex-start;
+  border-radius: 26px 26px 0 0;
+  background: #EDC129;
+
+}
+
+.logo-collage {
+  width: 250px;
+
+
+}
+
+.contain {
+  display: flex;
+  max-width: 94px;
+  padding: 25px 42px;
+  justify-content: center;
+
+  align-content: center;
+  gap: 10px;
+  align-self: stretch;
+  flex-wrap: wrap;
+  border-radius: 24px;
+  background: rgba(50, 58, 135, 0.76);
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+}
+
+.contain2 {
+  display: flex;
+  height: 64px;
+  padding: 25px 42px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex: 1 0 0;
+  border-radius: 24px;
+  background: rgba(50, 58, 135, 0.76);
+}
+
+.collage-texto {
+
+  color: #000;
+  text-align: center;
+  text-shadow:
+    1px 1px 0 #FFF,
+    -1px 1px 0 #FFF,
+    1px -1px 0 #FFF,
+    -1px -1px 0 #FFF;
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.collage-texto2 {
+  color: #000;
+  text-align: center;
+  text-justify: center;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-shadow:
+    1px 1px 0 #FFF,
+    -1px 1px 0 #FFF,
+    1px -1px 0 #FFF,
+    -1px -1px 0 #FFF;
+}
+
+.collage-cont {
+  display: flex;
+  min-height: 580px;
+  padding: 31px 43px;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 0 0;
+  background: rgba(0, 0, 0, 0.44);
+}
+
+.collage-align {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 10px;
+  align-self: stretch;
+  flex-wrap: wrap;
+}
+
+.sitio-fotos {
+  display: flex;
+  width: 120px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+}
+
+.fotos {
+  display: flex;
+  height: 142px;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  aspect-ratio: 1/1;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.fotos:hover {
+
+  border: 1px solid #000;
+  background: linear-gradient(180deg, rgba(134, 44, 44, 0.99) 0%, rgba(32, 11, 11, 0.99) 100%);
+  filter: blur(2px);
+}
+
+.fotos-c {
+
+  height: 142px;
+
+}
+
+.fotos-texto {
+  align-self: stretch;
+  color: #FFF;
+  text-align: center;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+
+  font-size: clamp(12px, 5vw, 90%);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.frame {
+  width: 145px;
+  height: 145px;
+  aspect-ratio: 1/1;
+  border-radius: 2px;
+  border: 4px solid rgba(0, 0, 0, 0.00);
+  background: rgba(211, 189, 127, 0.00);
 }
