--- a/diseno.css
+++ b/diseno.css
@@ -16,13 +16,23 @@ body {
 
 .header {
   display: flex;
-  padding: 10px 40px;
+  padding: 10px 20px;
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
   background: #1E2959;
-
+  padding: auto;
+  flex-wrap: wrap;
+      z-index: 1000;
 }
+@media screen and (max-width: 992px) {
+    .header {
+        padding: 1rem 1.5rem;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 15px;
+    }
+  }
 
 .header-background:hover {
   background: #4b557c;
@@ -38,10 +48,12 @@ body {
 
 .header-background {
   display: flex;
-  width: 550px;
+
   height: 154px;
   justify-content: center;
   align-items: center;
+    align-self: stretch;
+  
 }
 
 .home-link {
@@ -59,11 +71,12 @@ body {
 
 .header-links {
   display: flex;
-  width: 688.688px;
+
   padding: 0 80px;
   justify-content: center;
   align-items: center;
   gap: 39px;
+    align-self: stretch;
 
 }
 
@@ -91,7 +104,7 @@ body {
 .main-content {
 
   display: flex;
-  height: 1237px;
+
   padding: 20px 64px;
   flex-direction: column;
   align-items: flex-start;
